# Lua-NOGC

./: CMakeLists.txt
.github/workflows/: Lua-5.3.5.yml  Lua-NOGC-CI.yml
src/: lgc.c
